--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background-image: url('./assets/bg.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.drop-shadow {
+    -webkit-box-shadow: 10px 10px 33px 10px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 10px 10px 33px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 10px 10px 33px 10px rgba(0, 0, 0, 0.1);
+}
+
+input[type = text]{
+    background-color: #fefefe;
+    height: 60px;
+    padding-left: 20px;
+
+}
+
+.btn-todo{
+    height: 60px !important;
+    background-color: #e9eeff !important;
+    color: #4772fe !important;
+    border: none !important;
+}
+
+.border-danger {
+    border: 1px solid red !important;
+}
+
+@font-face {
+    font-family: 'MyFont';
+    src: url('../assets/Montserrat-VariableFont_wght.ttf');
+  }
