show name of category

--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,9 +1,6 @@
 <div class="row justify-content-center md-3">
     <div class="col-md-4 text-center">
-        <h1> TODOS </h1>
-        <p class="text-info">
-            Get your things done!
-        </p>
+        <h1> {{category.data.category}} </h1>
     </div>
 </div>
 
