--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header >
-    <div class="container">
+    <div class="container" [routerLink]="['/']">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
                 <h5 class="text-primary brand">
