--- a/src/app/todo/todo.component.css
+++ b/src/app/todo/todo.component.css
@@ -19,11 +19,6 @@
 
 .todo-lists .card:hover {
     cursor: pointer;
-    width: 600px;
-    height: 80px;
-    margin-left: -15px;
-    border-top-left-radius: 30px;
-    border-bottom-right-radius: 30px;
 }
 
 .todo-lists .card:hover .todo-tools {
@@ -36,10 +31,14 @@ i {
 
 hr {
     display: block;
-    margin-top: -8px;
+    margin-top: -12px;
     margin-left: 30px;
     margin-right: auto;
     border-style: inset;
-    border-width: 1px;
+    border-width: 2px;
     background-color: black;
+}
+
+h1 {
+    margin-bottom: 1em;
 }
