--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<header >
+<header [ngStyle]="{'display': isWindowSmallerThan992px ? 'none' : 'block'}">
     <div class="container" [routerLink]="['/']">
         <div class="row justify-content-md-center">
             <div class="col-md-auto">
