--- a/src/app/layouts/navbar/navbar.component.css
+++ b/src/app/layouts/navbar/navbar.component.css
@@ -13,6 +13,6 @@ header {
     font-family: 'MyFont';
     letter-spacing: 3rem;
     font-size: 60px;
-    color: black !important;
+    color: rgb(228, 255, 232) !important;
     
 }
