--- a/src/app/small-todo/small-todo.component.html
+++ b/src/app/small-todo/small-todo.component.html
@@ -1,8 +1,8 @@
 <div *ngFor="let todo of todos">
     <div *ngIf="!todo.data.isCompleted">
         <div class="float-start text-secondary">
-            <i class="far fa-circle text-danger" *ngIf="!todo.data.isCompleted"></i>
-            <i class="fas fa-check text-success" *ngIf="todo.data.isCompleted"></i>
+            <i class="far fa-circle text-danger" *ngIf="!todo.data.isCompleted" (click)="markComplete(todo.id)"></i>
+            <i class="fas fa-check text-success" *ngIf="todo.data.isCompleted" (click)="markUncomplete(todo.id)"></i>
             {{todo.data.todo}}
             <hr *ngIf="todo.data.isCompleted">
         </div>
