--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center md-3">
-    <div class="col-md-4 text-center">
+    <div class="col-md-4 text-center green-color">
         <h1> {{category.data.category}} </h1>
     </div>
 </div>
@@ -9,11 +9,11 @@
         <form #f="ngForm" (ngSubmit)=' f.form.valid && onSubmit(f)' class="form-inline">
             <div class="float-start col-md-10 form-group">
                 <input type="text" placeholder="Add new Todos here" name="todoText"
-                    class="form-control-plaintext drop-shadow" [(ngModel)]='todoName' required #todo='ngModel'
+                    class="form-control-plaintext drop-shadow border dark-theme" [(ngModel)]='todoName' required #todo='ngModel'
                     [ngClass]="{'border-danger': f.submitted && todo.invalid}">
             </div>
             <button type="submit"
-                class="float-end btn btn-primary col-md-2 btn-todo btn-block drop-shadow">{{buttonStatus}}</button>
+                class="float-end btn btn-primary col-md-2 btn-todo btn-block drop-shadow border dark-theme">{{buttonStatus}}</button>
             <div class="text-danger ml-3" *ngIf="f.submitted && todo.invalid && todo.errors?.['required']">Category is
                 required.</div>
         </form>
